crates/pattern_provider/src/compose/snapshots/pattern_provider__compose__render__tests__render_file_edit_watch_no_diff_snapshot.snap
---
source: crates/pattern_provider/src/compose/render.rs
assertion_line: 650
expression: rendered
---
<system-reminder>
External edit while you were thinking:
- 2025-04-18T18:13:20Z /tmp/watched.log (you were watching) changed
</system-reminder>
