crates/pattern_provider/src/compose/snapshots/pattern_provider__compose__render__tests__render_port_event_scalar_payload_snapshot.snap
---
source: crates/pattern_provider/src/compose/render.rs
expression: rendered
---
<system-reminder>
[port:event] port="weather-api" at=2025-04-18T18:13:20Z
{
  "condition": "sunny",
  "temp_c": 22
}
</system-reminder>
