crates/pattern_provider/src/compose/snapshots/pattern_provider__compose__render__tests__render_shell_output_exit_killed_snapshot.snap
---
source: crates/pattern_provider/src/compose/render.rs
expression: rendered
---
<system-reminder>
shell task a1b2c3d4 @ 2025-04-18T18:13:20Z: [exited exit=signal duration_ms=500]
</system-reminder>
