crates/pattern_provider/src/compose/snapshots/pattern_provider__compose__render__tests__render_shell_output_exit_snapshot.snap
---
source: crates/pattern_provider/src/compose/render.rs
expression: rendered
---
<system-reminder>
shell task a1b2c3d4 @ 2025-04-18T18:13:20Z: [exited exit=0 duration_ms=1234]
</system-reminder>
