crates/pattern_provider/src/compose/snapshots/pattern_provider__compose__render__tests__render_skill_loaded_text_snapshot.snap
---
source: crates/pattern_provider/src/compose/render.rs
assertion_line: 679
expression: text
---
[skill:loaded] name="fix-authentication" trust_tier="project-local"

## Overview

Handles OAuth2 token refresh for expired sessions.

[skill:loaded:end]
